--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header>
 	<ul class="nav nav-tabs navbar-dark bg-light fixed-top">
 	  <li class="nav-item">
-		 <a class="nav-link " href="../myportfolio/index.html">SODSTAR</a>
+		 <a class="nav-link " href="https://dpsalmist.github.io/sodstar.github.io/index.html">SODSTAR</a>
 	</li> 
 	  <li class="nav-item">
 	    <a class="nav-link " href="#about">About Me</a>
